引入aop,访问接口日志存入数据库

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,6 +6,9 @@ spring:
     name: springboot-demo
   profiles:
     active: dev
+  aop:
+    auto: true
+    proxy-target-class: true
 mybatis-plus:
   mapper-locations: classpath*:/mapper/**Mapper.xml
 logging:
